--- a/index.html
+++ b/index.html
@@ -82,7 +82,21 @@ function factorial(n) {
     </div>
 </article>
 <footer>
-    <p>© 2021 Ales Voronin</p>
+    <div class="footer">
+        <div>
+            <p>© 2021 Ales Voronin</p>
+        </div>
+        <div>
+            <a href="https://github.com/AlesVoronin/" target="_blank">
+                <img src="images/github.png"/>
+            </a>
+        </div>
+        <div>
+            <a href="https://rs.school/js/" target="_blank">
+                <img src="images/rs_school_js.svg">
+            </a>
+        </div>
+    </div>
 </footer>
 </body>
 </html>
