fix: update for validator error

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h3>Code example:</h3>
         <pre class="code">
 function factorial(n) {
-    if (n &lt 0 || n &gt 12) {
+    if (n &lt; 0 || n &gt; 12) {
         throw "RangeError"
     }
     var result = 1;
@@ -88,12 +88,12 @@ function factorial(n) {
         </div>
         <div>
             <a href="https://github.com/AlesVoronin/" target="_blank">
-                <img src="images/github.png"/ alt="github">
+                <img src="images/github.png" alt="github"/>
             </a>
         </div>
         <div>
             <a href="https://rs.school/js/" target="_blank">
-                <img src="images/rs_school_js.svg" alt="rs_school_js">
+                <img src="images/rs_school_js.svg" alt="rs_school_js"/>
             </a>
         </div>
     </div>
