fix: update validation warning

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <img src="images/1.jpg" alt="my_photo"/>
     </div>
 </header>
-<article>
+<main>
     <div class="context">
         <section class="name">
-            <p>Ales Voronin</p>
+            <h1>Ales Voronin</h1>
             <div class="line"></div>
         </section>
         <section class="contacts">
@@ -37,9 +37,21 @@
         </section>
         <section class="skills">
             <h3>Skills:</h3>
-            <p>
-                HTML5 CSS3 SQL JavaEE Spring Framework Python Delphi 1C:Зарплата и Кадры Adobe Photoshop Adobe Animate CorelDRAW GitHub Intelij WebStorm Intelij IDEA
-            </p>
+            <div class="skills-list">
+                <p>HTML5</p>
+                <p>CSS3</p>
+                <p>SQL</p>
+                <p>JavaEE</p>
+                <p>Spring Framework</p>
+                <p>Python Delphi</p>
+                <p>1C:Зарплата и Кадры</p>
+                <p>Adobe Photoshop</p>
+                <p>Adobe Animate</p>
+                <p>CorelDRAW</p>
+                <p>GitHub</p>
+                <p>Intelij WebStorm</p>
+                <p>Intelij IDEA</p>
+            </div>
         </section>
         <section class="code-text">
             <h3>Code example:</h3>
@@ -80,7 +92,7 @@ function factorial(n) {
             <p>A2</p>
         </section>
     </div>
-</article>
+</main>
 <footer>
     <aside class="footer">
         <div>
